--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0-rc11",
+    "nuxt": "^1.1.1",
     "vue-touch": "^2.0.0-beta.4"
   },
   "devDependencies": {
