--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
+  },
+  "engines": { 
+    "node" : ">=9.2.1" 
   }
 }
