--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/component-cache": "^1.1.1",
     "nuxt": "^1.1.1",
     "vue-touch": "^2.0.0-beta.4"
   },
@@ -30,7 +31,7 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   },
-  "engines": { 
-    "node" : ">=9.2.1" 
+  "engines": {
+    "node": ">=9.2.1"
   }
 }
